Update to the Lab1 files of IPSP

--- a/training/IPSP/Lab1/010_WAVEGUIDES_v2025_Student.ipynb
+++ b/training/IPSP/Lab1/010_WAVEGUIDES_v2025_Student.ipynb
@@ -8,7 +8,7 @@
     "![PIC UPV PERTE Chip Chair Logo](https://www.pic-chair.upv.es/wp-content/uploads/2024/06/logos-perte-chip-1024x119.png)\n",
     "\n",
     "\n",
-    "# Laboratory 0.1. ModeSolver"
+    "# Laboratory 1. Waveguides"
    ]
   },
   {
@@ -391,7 +391,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explain here the compact model equation"
+    "Transfer function for propagation in a waveguide:\n",
+    "\n",
+    "$$\n",
+    "H(\\lambda)\n",
+    "= e^{-j\\,\\beta(\\lambda)\\,z}\n",
+    "= e^{-j\\,\\mathrm{Re}\\{\\beta(\\lambda)\\}\\,z}\\,\n",
+    "  e^{\\mathrm{Im}\\{\\beta(\\lambda)\\}\\,z}.\n",
+    "$$\n",
+    "\n",
+    "Where \n",
+    "\n",
+    "$$\n",
+    "\\beta(\\lambda)\n",
+    "= \\frac{2\\pi}{\\lambda}\\,\\mathrm{Re}\\{n_\\mathrm{eff}(\\lambda)\\}.\n",
+    "$$\n",
+    "\n",
+    "Let's model the waveguide's effective index wavelength variation using a second order polynomial:\n",
+    "\n",
+    "$$\n",
+    "n_\\mathrm{eff}(\\lambda)\n",
+    "= n_{1} + n_{2}\\,(\\lambda-\\lambda_{0}) + n_{3}\\,(\\lambda-\\lambda_{0})^{2}\n",
+    "$$\n",
+    "\n",
+    "Where \n",
+    "\n",
+    "1. \n",
+    "$$\n",
+    "n_\\mathrm{eff}(\\lambda_0) = n_1\n",
+    "$$\n",
+    "2. \n",
+    "$$\n",
+    "n_g(\\lambda_0) = n_1 - n_2\\,\\lambda_0\n",
+    "$$\n",
+    "3. \n",
+    "$$\n",
+    "D = -\\frac{2\\,\\lambda_0\\,n_3}{c}\\;\\;[\\mathrm{s}^2/\\mathrm{m}]\n",
+    "$$"
    ]
   },
   {
@@ -408,6 +444,17 @@
    "metadata": {},
    "source": [
     "## LO.5. Bend waveguide radius vs. loss – deep"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The bend loss has three primary contributions:\n",
+    "\n",
+    "1. Mode-mismatch loss\n",
+    "2. Radiation loss\n",
+    "3. Propagation loss"
    ]
   },
   {
@@ -443,7 +490,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explain here we have different kind of losses"
+    "### Mode-mismatch loss\n",
+    "\n",
+    "Bend waveguide mode differs slightly from the straight waveguide mode, wich yield into mode-convertion losses. We can calculate this factor with as the overlap of the latter two modes. \n",
+    "\n",
+    "This is already implemented on GDSfactory library: "
    ]
   },
   {
@@ -466,7 +517,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explain here we add bend-mode + propagation losses"
+    "### Propagation loss\n",
+    "\n",
+    "Consider the equivalent linear length of the quarter-circle bend. Light will attenuate following a trend quantified with the experimentally measured parameter $$\\alpha [\\mathrm{dB}/\\mathrm{cm}]$$. It depends on the fabrication process mainly. We will add this loss (in dBs) to the mode-mismatch loss to calculate the total loss per bend. \n",
+    "\n",
+    "*We are not considering the radiation losses, mainly because is not easy to implement a quick simulation for this parameter. Under certain conditions, the main loss sources are the ones considered in this example\n"
    ]
   },
   {
