--- a/training/IPSP/Lab2/020_COUPLERS_v2025_Student.ipynb
+++ b/training/IPSP/Lab2/020_COUPLERS_v2025_Student.ipynb
@@ -697,6 +697,7 @@
     "        print(\"Excess loss [dB] = \", f\"{self.EL:.4f}\")\n",
     "        print(\"------------------------\")\n",
     "        print(\"Power over OUTs: \", [f\"{num:.4f}\" for num in self.power_OUT])\n",
+    "        print(\"Phase over OUTs: \", [f\"{num:.4f}\" for num in self.phase_OUT])\n",
     "        print(\"Ratio over OUTs\", [f\"{num:.4f}\" for num in self.ratio_OUT])\n",
     "        \n",
     "\n",
@@ -1233,7 +1234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LO.3. 2x2 Directional Coupler (Not mandatory)\n",
+    "## LO.3. 2x2 Directional Coupler \n",
     "\n",
     "Here, you will use some functions provided by us (check **0. Imports** for more details) to simulate the propagation in a 2x2 directional coupler. Please read all the comments in the following code carefully and **make changes only to the lines marked with the #Student tag**"
    ]
@@ -1253,7 +1254,7 @@
     "wg_N = 2\n",
     "\n",
     "m = DC_EME() # Here you instantiate a Directional Coupler to be simulated with the Eigen-mode expansion (EME) algorithm.\n",
-    "m.MMI_num_modes = 12 # Number of modes to be calculated. Here, the higher, the better since we are going to calculate\n",
+    "m.MMI_num_modes = 20 # Number of modes to be calculated. Here, the higher, the better since we are going to calculate\n",
     "                    # the propagation based on the mode decomposition. \n",
     "m.DC_wg_gap = wg_gap # Gap between waveguides\n",
     "m.DC_wg_width = wg_width # Width of the waveguides core\n",
@@ -1410,7 +1411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## LO.5. 2x2 Multimode Interference Coupler (Not mandatory)\n",
+    "## LO.5. 2x2 Multimode Interference Coupler\n",
     "\n",
     "For the multimode interference (MMI) couplers we must rely on the design tables shown on the theoretical session: \n",
     "\n",
@@ -1431,7 +1432,7 @@
     "\n",
     "m = MMI_EME() # Here you instantiate a MMI to be simulated with the Eigen-mode expansion (EME) algorithm.\n",
     "m.MMI_width = mmi_Width\n",
-    "m.MMI_num_modes = 12 # Number of modes to be calculated. Here, the higher, the better since we are going to calculate\n",
+    "m.MMI_num_modes = 20 # Number of modes to be calculated. Here, the higher, the better since we are going to calculate\n",
     "                    # the propagation based on the mode decomposition. \n",
     "\n",
     "# 1) Compute de MMI body modes - Only execute whenever a geometrical parameter is changed. Takes time to find the modes. \n",
