--- a/training/IPSP/Lab2/020_COUPLERS_v2025_Student.ipynb
+++ b/training/IPSP/Lab2/020_COUPLERS_v2025_Student.ipynb
@@ -1218,9 +1218,9 @@
     "L_pi_TE = 0.5*lambda_c/(dcoupler_neff[0].real-dcoupler_neff[1].real)\n",
     "print(L_pi_TE)\n",
     "\n",
-    "L_coup = ... # Student code here\n",
+    "L_coup = np.linspace(0,2*L_pi_TE,101) # Student code here\n",
     "\n",
-    "K = ... # Student code here\n",
+    "K = (np.sin(0.5*np.pi*(L_coup/L_pi_TE)))**2 # Student code here\n",
     "\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.plot(L_coup/L_pi_TE, K)\n",
@@ -1247,7 +1247,7 @@
    "source": [
     "# Simulation flow for Directional Couplers\n",
     "# Define your geometrical parameters here\n",
-    "wg_gap = 0.6 # Student. Gap between waveguides\n",
+    "wg_gap = 2.0 # Student. Gap between waveguides\n",
     "wg_width = 1.2 # Student. Core waveguides width\n",
     "\n",
     "d = wg_width + wg_gap\n",
@@ -1285,7 +1285,7 @@
     "m.n_IN = 2\n",
     "m.n_OUT = 2\n",
     "\n",
-    "m.L_MMI = 0.5*L_pi # Since we use the same library for propagation simulations of MMI and DC \n",
+    "m.L_MMI = 0.1*L_pi # Since we use the same library for propagation simulations of MMI and DC \n",
     "                    # some variables might be identified as \"MMI\". Sorry about that (: \n",
     "                    # Might change in the future \n",
     "\n",
@@ -1325,7 +1325,7 @@
     "    wavelength=lambda_c, # Wavelength to simulate\n",
     "    num_modes=15, # Targeted number of modes to find - Higher than before! It's a multimode section\n",
     "    max_grid_scaling=1.5, # Parameters of the grid\n",
-    "    grid_resolution=20, # Parameters of the grid\n",
+    "    grid_resolution=40, # Parameters of the grid\n",
     "    cache_path='.cache/', # Important! In order to save simulation time, set your cache Path!\n",
     "    precision='double',\n",
     ")\n",
@@ -1432,7 +1432,7 @@
     "\n",
     "m = MMI_EME() # Here you instantiate a MMI to be simulated with the Eigen-mode expansion (EME) algorithm.\n",
     "m.MMI_width = mmi_Width\n",
-    "m.MMI_num_modes = 20 # Number of modes to be calculated. Here, the higher, the better since we are going to calculate\n",
+    "m.MMI_num_modes = 40 # Number of modes to be calculated. Here, the higher, the better since we are going to calculate\n",
     "                    # the propagation based on the mode decomposition. \n",
     "\n",
     "# 1) Compute de MMI body modes - Only execute whenever a geometrical parameter is changed. Takes time to find the modes. \n",
